--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,21 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
+  bloc: ^8.1.4
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.4
+
   flutter_lints: ^5.0.0
+
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
+  generate: true
